--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+Assets/Firebase/Plugins/x86_64/*.so filter=lfs diff=lfs merge=lfs -text
+Assets/Firebase/Plugins/x86_64/*.bundle filter=lfs diff=lfs merge=lfs -text
 Assets/Firebase/Plugins/x86_64/FirebaseCppApp-11_8_0.bundle filter=lfs diff=lfs merge=lfs -text
 Assets/Firebase/Plugins/x86_64/FirebaseCppApp-11_8_0.so filter=lfs diff=lfs merge=lfs -text
